--- a/src/2018-2-13/1.md
+++ b/src/2018-2-13/1.md
@@ -1,2 +1,15 @@
 [原文连接](https://www.forbes.com/sites/amydobson/2019/02/11/the-best-emerging-markets-in-europe-to-invest-in-before-brexit-makes-landfall/#377d3ea47558)
 
+# 2019年欧洲最好的新兴房地产市场
+
+在仅仅6个星期之后，英国将退出欧盟，与此同时，所有的焦点都聚集在欧洲各主要城市的地产市场。在各大企业离开英国，另辟新家的同时，新的商业中心将出现在欧洲大陆，地产投资者们在价格高到无法企及之前，仓促地预测该在哪里进行投资。有一点可以肯定，市场将很快看到利润增长的最大临界点。这不是那些创业公司因为租金便宜而搬家的情况，而是已建立的跨国组织需要机场和训练有素的劳动力。房地产市场将会迅速地适应这些跨国企业给城市带来的大量资金和丰厚薪酬。[LeadingRE](https://www.leadingre.com)，是一个在70个国家有着600个国际不动产经纪行的联盟，它们监控自己的市场运作情况，并为福布斯提供在欧洲‘二级’市场的独家数据，已经在去年见证了市场的最大增长。
+
+ "同时伦敦，日内瓦，巴黎和摩纳哥持续控制欧洲的资产最高价，其他城市也因为国际买家的大量出现以及卓越的投资回报，变得火热"，执行副总裁Chris Dietz在一封邮件里说：“我们持续火热的欧洲新兴市场证明国际投资者在这些城市越来越重要”
+
+## 萨格勒布,克罗地亚
+
+在萨格勒布，克罗地亚首都，一些事情正在悄然发生，所有迹象表明，下一年市场将会到达迎来爆炸性增长的临界点。最近这个国家见证了其第一个数字化地产公司[A Nekretnine](https://anekretnine.com)的开业，这是市场前景大好的最有利支持。根据A Nekretnine提供的数据，该城市的公寓卖价在2018年提高了20%，而其他城市只提高了8.5%。另外，过去的12个月里Airbnb上，萨格勒布房屋广告有30%的增长。所以，假期租赁同样也有需求激增。A Nekretnine创始人Nino Ćosić统计，有20%的买家来自其他国家。他还对下一年相当数量的不动产，以内部人士给了建议。这些在上一次危机中停工了的房屋，现在都得以完工。
+
+### 里斯本，葡萄牙
+
+里斯本作为长久以来的旅游圣地，最近看到了房屋需求的火箭式增长
