--- a/src/2018-2-13/1.md
+++ b/src/2018-2-13/1.md
@@ -12,4 +12,20 @@
 
 ### 里斯本，葡萄牙
 
-里斯本作为长久以来的旅游圣地，最近看到了房屋需求的火箭式增长
+里斯本作为长久以来的旅游圣地，最近看到了房屋需求的火箭式增长。部分原因在于黄金签证制度，在欠发达地区投资350,000欧元或在高档地区投资50万欧元的外国买家可以快速获得公民身份，并为新的高收入居民提供优惠的税率。 过去一年价格上涨了20％。 根据Caetano Real Estate的一位代表，该市已经发现来自南非，德国，中国和法国的买家对新奢侈高端开发项目有浓厚兴趣，此外，加拿大人，美国人，巴西人和意大利人也越来越感兴趣。
+
+### 普罗夫迪夫，保加利亚
+
+普罗夫迪夫是保加利亚的第二大城市，被欧盟命名为欧洲文化之都，这意味着该城市是未来12个月的主要焦点，许多城市复兴项目已经开始实施。 在该市南部有一条新的地铁线路，来自国内经纪公司Unique Estates的代表称，Vitosha和Krastova vada等社区在其大部分是工业区之后再次成为住宅中心。 价格趋势与首都索非亚一致，去年中等价位的房屋增长了约9％。 奢侈品领域的住宅增长了6％。 虽然这些数字不是两位数增长数字，但作为文化之都的投资金额将使这些数字在短短一年的时间内显着上升。
+
+### 费尔德基希和布鲁登茨，奥地利
+
+整个奥地利已进入房地产热潮，这意味着二级城市由于房价较低（目前）而变得更具吸引力，但距离主要目的地足够近的购房者仍然希望住在那里的。 根据奥地利西部两个高山城镇经纪人冯·波尔房地产，费尔德基希和布鲁登茨提供的数据，过去一年价格分别上涨了25.4％和22.1％。 这与维也纳的首都相比，他们只增加了18％。 奥地利最高价的目的地城市是基茨比厄尔，其房产价格接近100万欧元，去年它们增加了39.4％。 相比之下，费尔德基希和布鲁登茨的平均销售价格约为350,000欧元。
+
+### 荷兰鹿特丹
+
+荷兰的不寻常之处在于其首都阿姆斯特丹的房屋市场租金占70％，因此买家的库存非常低，但还有其他大型城市地区值得投资。坐落在距阿姆斯特丹约一小时，距离海牙半小时，不断发展的鹿特丹大都市，价格比去年上涨17％，超过全国平均水平10％。 根据VOC International的数据，他们在市场上售出平均只需要33天，比前一年快11％。 鹿特丹的房价平均为271,000欧元。
+
+但如果欧洲不适合你，[这里](https://www.forbes.com/sites/amydobson/2018/12/12/the-best-places-to-invest-in-a-second-home-for-2019/#2642c17051f4)列出了2019年投资第二套住房的美国最佳城市。
+
+在Twitter上关注我[@amydobsonRE](https://twitter.com/amydobsonRE)
