--- a/src/2018-2-13/2.md
+++ b/src/2018-2-13/2.md
@@ -1,2 +1,8 @@
 [原文链接](https://www.scmp.com/property/hong-kong-china/article/2185876/brace-20-cent-decline-hong-kong-home-prices-says-senior)
 
+
+# CK Asset高级主管表示，香港房价下跌高达20％
+
++ CK Asset执行董事Justin Chiu表示，未来22个月房价可能下跌20％，前景黯淡
++ 他表示，预计建筑商会在滑坡市场的同时削减新房价格
+
