--- a/加解密/前端加解密.md
+++ b/加解密/前端加解密.md
@@ -4,6 +4,7 @@
 
 参考文档：
 [https://cjting.me/2020/03/13/rsa/](https://cjting.me/2020/03/13/rsa/)
+[https://developer.mozilla.org/zh-CN/docs/Web/API/SubtleCrypto](https://developer.mozilla.org/zh-CN/docs/Web/API/SubtleCrypto)
 《Understanding-Cryptography》
 
 ## 前言
@@ -31,11 +32,11 @@
 
 根据克劳德·香农的信息理论，强加密算法的两个条件：
 
-1. **Confusion** is an encryption operation where the relationship between key and ciphertext is obscured. Today, a common element for achieving confusion is sub-stitution, which is found in both DES and AES.
+1. **Confusion** is an encryption operation where the relationship between key and ciphertext is obscured. Today, a common element for achieving confusion is substitution, which is found in both DES and AES.
 2. **Diffusion** is an encryption operation where the influence of one plaintext symbol is spread over many ciphertext symbols with the goal of hiding statistical properties of the plaintext. A simple diffusion element is the bit permutation, which is used frequently within DES. AES uses the more advanced Mixcolumn operation.
 
 翻译过来：
-* 明文和密文关系模糊，使攻击者很难分析，比如通过置换等方式实现。
+* 明文和密文关系模糊，使攻击者很难分析，比如通过替换等方式实现。
 * 明文的每一位改动都要对最后的密文产生很大的影响，比如通过位置换
 
 密码学主要解决四个问题：
@@ -105,7 +106,7 @@
 ### 对称加密
 
 * DES(不安全),3DES
-* AES
+* AES(推荐替代DES的算法)
 
 内部实现很复杂,略
 
@@ -124,7 +125,7 @@ DES已被破解
 * ECC
 
 #### DH(Diffie-Hellman)秘钥交换算法
-
+不安全信道上如何传输秘钥？
 
 #### RSA
 
@@ -180,9 +181,15 @@ Ecc原理解析：
 解密：
 
 ![hybrid-decryption](imgs/hybrid-decryption.png)
+
 ### 数字签名
 
-ECDSA:(r,s,v)
+数字签名技术有以下几个特点。
++ 防篡改：数据不会被修改，MAC算法也有这个特点。
++ 防抵赖：消息签署者不能抵赖。
++ 防伪造：发送的消息不能够伪造，MAC算法也有这个特点。
+
+ECDSA:(r,s,v) 略
 
 v = 27 + (y % 2)
 
@@ -208,9 +215,21 @@ v = 27 + (y % 2)
 MD5是不安全的
 目前SHA1已经被攻破，SHA2被攻破只是时间问题。
 
-### 消息验证码
+### 消息验证码(MAC)
 
-### 数字证书
+不细说，只提和hash的区别：
+消息认证码(mac)是带密钥的，构造方法上通常基于Hash函数，比如HMAC,MDx-MAC。也可以基于分组密码比如CBC类的MAC，还有就是基于泛Hash函数族。
+
+
+### https和数字证书
+
+![https](./imgs/https.jpg)
+
+TSL内部就有各种密码套件，实现安全传输
+
+数字证书就类似于我们的身份证，用来标识网络中的用户(计算机)身份
+
+看下百度的证书链。
 
 ### base64和其他
 
