--- a/加解密/前端加解密.md
+++ b/加解密/前端加解密.md
@@ -30,7 +30,7 @@
 
 ## 加解密基础概念
 
-根据克劳德·香农的信息理论，强加密算法的两个条件：
+根据克劳德·香农的信息理论，强加密算法的两个原操作：
 
 1. **Confusion** is an encryption operation where the relationship between key and ciphertext is obscured. Today, a common element for achieving confusion is substitution, which is found in both DES and AES.
 2. **Diffusion** is an encryption operation where the influence of one plaintext symbol is spread over many ciphertext symbols with the goal of hiding statistical properties of the plaintext. A simple diffusion element is the bit permutation, which is used frequently within DES. AES uses the more advanced Mixcolumn operation.
@@ -76,11 +76,12 @@
     - 迭代运行每个数据块，最终得到密文。
 
   ![modeAll](./imgs/mode/modeAll.png)
-
+  
 * 填充标准
+
  明文必须是分组的倍数，如果不是，就需要填充。有一些标准定义了如何进行填充：PKCS#7和PKCS#5里面有定义填充标准
 
- 最简单的填充0，但如果明文本身末尾有0，解密出来的就不是原文了
+ 最简单的方式填充0，但如果明文本身末尾有0，解密出来的就不是原文了
 
  PKCS#7 很简单，根据填充的字节数量进行对应的填充，如果填充的字节长度n是3，填充的值就是030303；如果n是5，那么填充的值就是0505050505，填充值最后一个字节代表的就是实际填充的长度。
 
@@ -112,20 +113,18 @@
 
 DES已被破解
 
-#### Data Encryption Standard (DES)
-
-
-#### Advanced Encryption Standard(AES)
-
-
 ### 非对称加密
 * DH(Diffie-Hellman)
 * RSA
 * Elgamal
 * ECC
 
-#### DH(Diffie-Hellman)秘钥交换算法
-不安全信道上如何传输秘钥？
+#### DH(Diffie-Hellman)秘钥交换算法 和 DLP
+Alice 和Bob想要在一个不安全的信道共享一个密钥？
+
+[DH算法原理](https://blog.csdn.net/mrpre/article/details/52608867)
+
+基于ECC的DH,ECDH
 
 #### RSA
 
@@ -168,10 +167,8 @@ RSA基于大整数分解，ECC和ElGamal基于离散对数问题
 Ecc原理解析：
 [https://zhuanlan.zhihu.com/p/103665076](https://zhuanlan.zhihu.com/p/103665076)
 
-##### 离散对数问题(DLP)
 
-
-
+##### 应用
  >实际应用中，我们通常使用非对称加密方案来加解密对称秘钥，再由对称秘钥对明文进行加解密
 
 加密：
@@ -217,7 +214,7 @@ MD5是不安全的
 
 ### 消息验证码(MAC)
 
-不细说，只提和hash的区别：
+不细讲，只提和hash的区别：
 消息认证码(mac)是带密钥的，构造方法上通常基于Hash函数，比如HMAC,MDx-MAC。也可以基于分组密码比如CBC类的MAC，还有就是基于泛Hash函数族。
 
 
