--- a/加解密/前端加解密.md
+++ b/加解密/前端加解密.md
@@ -21,9 +21,9 @@
 
 ### 简单对称加密方法：替换密码和移位密码
 
-  * 替换比如：A→k B→d C→w ...
+  * 替换密码,比如：A→k B→d C→w ...
 
-  * 移位密码如凯撒加密，右移3位
+  * 移位密码,如凯撒加密，右移3位
   
   但这些可以暴力破解，或通过字母出现的概率进行分析破解，比如英文单词里e的出现频率最高。
 
@@ -81,7 +81,7 @@
 
  明文必须是分组的倍数，如果不是，就需要填充。有一些标准定义了如何进行填充：PKCS#7和PKCS#5里面有定义填充标准
 
- 最简单的方式填充0，但如果明文本身末尾有0，解密出来的就不是原文了
+ 最简单的方式都填充0，但如果明文本身末尾有0，解密出来的就不是原文了
 
  PKCS#7 很简单，根据填充的字节数量进行对应的填充，如果填充的字节长度n是3，填充的值就是030303；如果n是5，那么填充的值就是0505050505，填充值最后一个字节代表的就是实际填充的长度。
 
@@ -151,7 +151,7 @@ typedef struct rsa_st {
 RSA原理(很容易理解)：
 [https://cjting.me/2020/03/13/rsa](https://cjting.me/2020/03/13/rsa/)
 
-* 素性测试-->费马测试
+* 素性测试-->费马测试等等
 
 #### ECC
 * 椭圆加密的密钥更短
@@ -160,7 +160,7 @@ RSA原理(很容易理解)：
 
 ECC没有直接提供一个加密方法，但我们可以使用ECDH产生一个共有的密钥，然后用对称加密方案进行加密
 
->非对称秘钥方案都基于**单向函数f(x)**,求解其逆函数的解相当困难
+>非对称秘钥方案都基于**单向函数f(x)**,求解其逆函数f(x)^-1的解相当困难
 RSA基于大整数分解，ECC和ElGamal基于离散对数问题
 
 
@@ -186,6 +186,8 @@ Ecc原理解析：
 + 防抵赖：消息签署者不能抵赖。
 + 防伪造：发送的消息不能够伪造，MAC算法也有这个特点。
 
+RSA
+DSA
 ECDSA:(r,s,v) 略
 
 v = 27 + (y % 2)
@@ -215,7 +217,9 @@ MD5是不安全的
 ### 消息验证码(MAC)
 
 不细讲，只提和hash的区别：
-消息认证码(mac)是带密钥的，构造方法上通常基于Hash函数，比如HMAC,MDx-MAC。也可以基于分组密码比如CBC类的MAC，还有就是基于泛Hash函数族。
+消息认证码(mac)是带密钥的，
+hashes 用于保证数据的完整性， MAC 保证完整性和身份验证
+构造方法上通常基于Hash函数，比如HMAC,MDx-MAC。也可以基于分组密码比如CBC类的MAC，还有就是基于泛Hash函数族。
 
 
 ### https和数字证书
@@ -226,9 +230,9 @@ TSL内部就有各种密码套件，实现安全传输
 
 数字证书就类似于我们的身份证，用来标识网络中的用户(计算机)身份
 
-看下百度的证书链。
+可以看下百度的证书链。
 
-### base64和其他
+### base64和其他编码
 
 [ASN.1, DER, PEM, X509](https://blog.csdn.net/codehat/article/details/78592144?utm_source=blogxgwz7)
 
@@ -239,13 +243,27 @@ TSL内部就有各种密码套件，实现安全传输
 
 ### Buffer ArrayBuffer typedArray
 
+JS里的Array，因为有很多功能，而且是不限制类型的，或者它还可能是稀疏的(和java和c++等区别)……总之这个Array是“托管”的，它内部有比较复杂的实现。而如果你从XHR、File API、Canvas等等各种地方，读取了一大串字节流，如果用JS里的Array去存，又浪费，又低效。于是为了配合这些新的API增强JS的二进制处理能力，就有了ArrayBuffer。
+
+
+1. ArrayBuffer对象：代表内存之中的一段二进制数据，可以通过“视图”进行操作。“视图”部署了数组接口，这意味着，可以用数组的方法操作内存。
+
+2. TypedArray对象：用来生成内存的视图，通过9个构造函数，可以生成9种数据格式的视图，比如Uint8Array（无符号8位整数）数组视图, Int16Array（16位整数）数组视图, Float32Array（32位浮点数）数组视图等等。
+
+3. DataView对象：用来生成内存的视图，可以自定义格式和字节序，比如第一个字节是Uint8（无符号8位整数）、第二个字节是Int16（16位整数）、第三个字节是Float32（32位浮点数）等等。
+
+简单说，ArrayBuffer对象代表原始的二进制数据，TypedArray对象代表确定类型的二进制数据，DataView对象代表不确定类型的二进制数据。它们支持的数据类型一共有9种（DataView对象支持除Uint8C以外的其他8种）
+
+[arrayBuffer详解](https://javascript.ruanyifeng.com/stdlib/arraybuffer.html)
+
+在Node.js 里有一个与ArrayBuffer 相似的类叫做Buffer，但更强大一些。
 
 ## js加解密
 
 * 随着数据安全的需求提高，另外加上js的流行，出现越来越多的前端富应用。用户对客户端加密/前端(浏览器端)加密的需求越来越强。
 * 在已经有https(ssl/tsl)传输的基础上，前端的加解密是否必要？
  对于这个问题，我认为有个恰当的比喻：
- > 谁都知道小偷可以翻窗户进来，但出门的时候大家还是会锁上门
+ > 谁都知道小偷可以翻窗户进来，但出门的时候没人会不锁门
  
 * js的加解密有很多弊端，比如：
     + 缺少密码学安全的随机数生成器(CSPRNG)
@@ -354,7 +372,7 @@ const encodedMessage = enc.encode('hello');
 })()
   ```
 
-生成随机数
+[生成随机数](https://developer.mozilla.org/zh-CN/docs/Web/API/RandomSource/getRandomValues)
   ```js
   let array = new Uint32Array(10);
   window.crypto.getRandomValues(array);
