--- a/加解密/前端加解密.md
+++ b/加解密/前端加解密.md
@@ -114,17 +114,12 @@
 DES已被破解
 
 ### 非对称加密
-* DH(Diffie-Hellman)
+
 * RSA
+* DH(Diffie-Hellman)
 * Elgamal
 * ECC
 
-#### DH(Diffie-Hellman)秘钥交换算法 和 DLP
-Alice 和Bob想要在一个不安全的信道共享一个密钥？
-
-[DH算法原理](https://blog.csdn.net/mrpre/article/details/52608867)
-
-基于ECC的DH,ECDH
 
 #### RSA
 
@@ -143,7 +138,7 @@ typedef struct rsa_st {
 * e和n组合起来就相当于公钥，n值的长度就相当于密钥对的长度
 * 通过e、p、q能够计算出私钥d，d和n组合起来就是私钥。一旦计算出私钥，p和q这两个数就可以丢弃，这样更安全。如果不丢弃且和d一同保存在私钥文件中，则运算时效率更高。e和d之间存在互逆的关系。
 
-[n,e]就是共钥
+[n,e]就是公钥
 [n,d]就是私钥
 
 想知道d需要对n进行质数分解，n是个大整数，所以相当困难。
@@ -152,6 +147,20 @@ RSA原理(很容易理解)：
 [https://cjting.me/2020/03/13/rsa](https://cjting.me/2020/03/13/rsa/)
 
 * 素性测试-->费马测试等等
+
+#### DH(Diffie-Hellman)秘钥交换算法 和 DLP
+Alice 和Bob想要在一个不安全的信道共享一个密钥？
+
+[DH算法原理](https://blog.csdn.net/mrpre/article/details/52608867) (也很容易理解)
+
+[DLP离散对数问题](https://www.cnblogs.com/math/p/discrete-log.html)
+
+![DLP](imgs/DLP.jpg)
+
+加了模运算的对数运算是相当难的！
+
+基于ECC的DH,ECDH
+
 
 #### ECC
 * 椭圆加密的密钥更短
