--- a/加解密/前端加解密.md
+++ b/加解密/前端加解密.md
@@ -3,9 +3,14 @@
 # 前端加解密
 
 参考文档：
-[https://cjting.me/2020/03/13/rsa/](https://cjting.me/2020/03/13/rsa/)
-[https://developer.mozilla.org/zh-CN/docs/Web/API/SubtleCrypto](https://developer.mozilla.org/zh-CN/docs/Web/API/SubtleCrypto)
+SubtleCrypto：[https://developer.mozilla.org/zh-CN/docs/Web/API/SubtleCrypto](https://developer.mozilla.org/zh-CN/docs/Web/API/SubtleCrypto)
+RSA算法原理：[https://cjting.me/2020/03/13/rsa/](https://cjting.me/2020/03/13/rsa/)
+DH算法原理：https://blog.csdn.net/mrpre/article/details/52608867
+web cryptography API：https://www.theseus.fi/bitstream/handle/10024/92960/Web_Cryptography_API_Luoma-aho.pdf
+《深入浅出https》
+《java加密与解密艺术》
 《Understanding-Cryptography》
+
 
 ## 前言
 
@@ -36,8 +41,8 @@
 2. **Diffusion** is an encryption operation where the influence of one plaintext symbol is spread over many ciphertext symbols with the goal of hiding statistical properties of the plaintext. A simple diffusion element is the bit permutation, which is used frequently within DES. AES uses the more advanced Mixcolumn operation.
 
 翻译过来：
-* 明文和密文关系模糊，使攻击者很难分析，比如通过替换等方式实现。
-* 明文的每一位改动都要对最后的密文产生很大的影响，比如通过位置换
+* 明文和密文关系模糊，使攻击者很难分析，比如在DES和AES里通过替换等方式实现。
+* 明文的每一位改动都要对最后的密文产生很大的影响，比如DES通过位置换
 
 密码学主要解决四个问题：
 
@@ -64,8 +69,9 @@
     ECB模式最大的特点就是每个迭代过程都是独立的，是可以并行处理的，能够加快运算速度。由于固定的明文和密钥每次运算的结果都是相同的，这会造成很多安全问题。
   + CBC
    ![CBC](./imgs/mode/CBC.png)
-  引入初始化向量
+  引入初始化向量(IV)
   初始化向量必须每次都不一样，有了随机的初始化向量，同样的明文和密钥最终得到的密文是不一样的，解决了ECB模式存在的安全问题。
+  [does-iv-work-like-salt?](https://stackoverflow.com/questions/1949640/does-iv-work-like-salt)
   + CTR
   ![CTR](./imgs/mode/CTR.png)
     
@@ -153,11 +159,27 @@ Alice 和Bob想要在一个不安全的信道共享一个密钥？
 
 [DH算法原理](https://blog.csdn.net/mrpre/article/details/52608867) (也很容易理解)
 
+设 已知 二元组(q, p)
+
+Alice 生成随机值a，计算q^a mod p = Ga
+
+Bob  生成随机值b， 计算q^b mod p = Gb
+
+Alice 计算Sa =Gb^a mod p
+
+Bob 计算Sb = Ga^b mod p
+
+a,b私钥，Ga,Gb是公钥，计算出a和b是相当困难
+
+**Sa = Sb ?**
+
 [DLP离散对数问题](https://www.cnblogs.com/math/p/discrete-log.html)
 
 ![DLP](imgs/DLP.jpg)
 
-加了模运算的对数运算是相当难的！
+群，阿尔贝群等等，域....不展开
+
+加了模运算的对数运算是相当难的，比大整数质数分解还要难！NP问题
 
 基于ECC的DH,ECDH
 
@@ -170,12 +192,12 @@ Alice 和Bob想要在一个不安全的信道共享一个密钥？
 ECC没有直接提供一个加密方法，但我们可以使用ECDH产生一个共有的密钥，然后用对称加密方案进行加密
 
 >非对称秘钥方案都基于**单向函数f(x)**,求解其逆函数f(x)^-1的解相当困难
-RSA基于大整数分解，ECC和ElGamal基于离散对数问题
+RSA基于大整数分解，DH,ECC和ElGamal都是基于离散对数问题 
+ps：或许哪天出现了好的数学方法来解决这些问题，那这些加密方案将都不再安全
 
 
 Ecc原理解析：
 [https://zhuanlan.zhihu.com/p/103665076](https://zhuanlan.zhihu.com/p/103665076)
-
 
 ##### 应用
  >实际应用中，我们通常使用非对称加密方案来加解密对称秘钥，再由对称秘钥对明文进行加解密
@@ -241,14 +263,25 @@ TSL内部就有各种密码套件，实现安全传输
 
 可以看下百度的证书链。
 
+
 ### base64和其他编码
 
 [ASN.1, DER, PEM, X509](https://blog.csdn.net/codehat/article/details/78592144?utm_source=blogxgwz7)
+
+#### base64的由来
+
+Base64算法最早应用于解决电子邮件传输的问题。在早期，由于“历史问题”，电子邮件只允许ASCII码字符。如果要传输一封带有非ASCII码字符的电子邮件，当它通过有“历史问题”的网关时就可能出现问题。这个网关很可能会对这个非ASCII码字符的二进制位做调整，即将这个非ASCII码的8位二进制码的最高位置为0。此时用户收到的邮件就会是一封纯粹的乱码邮件了。基于这个原因产生了Base64算法。
 
 
 ![base64map](./imgs/base64map.png)
 
 ![base64demo](./imgs/base64demo.png)
+
+余数 = 原文字节数 mod 3
+
+余数为0 则没有等号
+余数为1 则要补2个等号
+余数为2 则要补1个等号
 
 ### Buffer ArrayBuffer typedArray
 
