--- a/加解密/前端加解密.md
+++ b/加解密/前端加解密.md
@@ -106,6 +106,8 @@ si+1 ≡ 1103515245si +12345 mod 231, i = 0,1,...
   引入初始化向量(IV)
   初始化向量必须每次都不一样，有了随机的初始化向量，同样的明文和密钥最终得到的密文是不一样的，解决了ECB模式存在的安全问题。
   [does-iv-work-like-salt?](https://stackoverflow.com/questions/1949640/does-iv-work-like-salt)
+  [为什么要在密码里加点“盐”](https://www.cnblogs.com/apolloren/p/11985083.html)
+
   + CTR
   ![CTR](./imgs/mode/CTR.png)
     
