--- a/加解密/前端加解密.md
+++ b/加解密/前端加解密.md
@@ -80,10 +80,11 @@ si+1 ≡ 1103515245si +12345 mod 231, i = 0,1,...
 ### 流密码和分组密码
 
 * 流密码(stream cipher) A5/1,RC4等,多用于手机端，效率高，对资源比较少的设备比较合适。但目前RC4已经证实不安全。
-  + OTP(一次一密)，无条件安全(不考虑计算资源的情况下安全)
+  + [OTP(一次一密)](https://zhuanlan.zhihu.com/p/136337156)，无条件安全(不考虑计算资源的情况下安全)
     - 真随机数生成器得到密钥序列s0,s1,s2....
     - 只有合法的通信方才知道密钥序列
     - 每个密钥序列只使用一次
+    (模2加法和xor等价,xor是可逆的)
     y0 = x0 + s0 mod 2
     y1 = x1 + s1 mod 2
     ...
@@ -268,7 +269,7 @@ v = 27 + (y % 2)
 
 ![hash](./imgs/hash.png)
 
-MD5是不安全的
+MD5是不安全的，产生了碰撞(不同的数据，得到相同的hash值)
 目前SHA1已经被攻破，SHA2被攻破只是时间问题。
 
 ### 消息验证码(MAC)
