--- a/加解密/前端加解密.md
+++ b/加解密/前端加解密.md
@@ -204,7 +204,10 @@ a,b私钥，Ga,Gb是公钥，计算出a和b是相当困难
 
 ![DLP](imgs/DLP.jpg)
 
-群，阿尔贝群等等，域....不展开
+群，阿贝尔群，循环群，本原元(生成元)....不展开
+
+其实P就是一个循环群，q是本原元
+
 
 加了模运算的对数运算是相当难的，比大整数质数分解还要难！NP问题
 
@@ -290,9 +293,10 @@ TSL内部就有各种密码套件，实现安全传输
 
 可以看下百度的证书链。
 
+[https申请证书并部署到网站流程，浏览器验证证书流程](https://www.cnblogs.com/zdz8207/p/https-public-key-pem-crt.html)
 
 ### 其他
-#### base64和其他编码
+#### base64
 
 [ASN.1, DER, PEM, X509](https://blog.csdn.net/codehat/article/details/78592144?utm_source=blogxgwz7)
 
