--- a/加解密/前端加解密.md
+++ b/加解密/前端加解密.md
@@ -455,3 +455,7 @@ const encodedMessage = enc.encode('hello');
   }
   ```
   
+
+  其他相关链接：
+  [What is the importance of Modular arithmetic in cryptography?
+](https://crypto.stackexchange.com/questions/1441/what-is-the-importance-of-modular-arithmetic-in-cryptography)
